force-app/main/default/objects/Task_Home__dll/fields/aircall_Call_Recording_c__c.field-meta.xml
<CustomField>
    <fullName>aircall_Call_Recording_c__c</fullName>
    <label>Call Recording</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>aircall_Call_Recording_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Url</type>
</CustomField>