force-app/main/default/objects/Task_Home__dll/fields/aircall_Connection_status_c__c.field-meta.xml
<CustomField>
    <fullName>aircall_Connection_status_c__c</fullName>
    <label>Connection status</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>aircall_Connection_status_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>