force-app/main/default/objects/Task_Home__dll/fields/aircall_External_contact_phone_number_c__c.field-meta.xml
<CustomField>
    <fullName>aircall_External_contact_phone_number_c__c</fullName>
    <label>External contact phone number</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>aircall_External_contact_phone_number_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>