force-app/main/default/objects/Task_Home__dll/fields/aircall_Hour_in_time_zone_c__c.field-meta.xml
<CustomField>
    <fullName>aircall_Hour_in_time_zone_c__c</fullName>
    <label>Hour in timezone</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>aircall_Hour_in_time_zone_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>