force-app/main/default/objects/Task_Home__dll/fields/aircall_Is_Missed_call_c__c.field-meta.xml
<CustomField>
    <fullName>aircall_Is_Missed_call_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Missed call</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>aircall_Is_Missed_call_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>