force-app/main/default/objects/Task_Home__dll/fields/aircall_Phone_number_c__c.field-meta.xml
<CustomField>
    <fullName>aircall_Phone_number_c__c</fullName>
    <label>Aircall number</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>aircall_Phone_number_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Phone</type>
</CustomField>