force-app/main/default/objects/Task_Home__dll/fields/aircall_Time_zone_c__c.field-meta.xml
<CustomField>
    <fullName>aircall_Time_zone_c__c</fullName>
    <label>Time zone</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>aircall_Time_zone_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>