force-app/main/default/objects/Task_Home__dll/fields/CallDisposition__c.field-meta.xml
<CustomField>
    <fullName>CallDisposition__c</fullName>
    <label>Résultat de l&apos;appel</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>CallDisposition</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>