force-app/main/default/objects/Task_Home__dll/fields/CallDurationInSeconds__c.field-meta.xml
<CustomField>
    <fullName>CallDurationInSeconds__c</fullName>
    <label>Durée de l&apos;appel</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>CallDurationInSeconds</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>