force-app/main/default/objects/Task_Home__dll/fields/CallObject__c.field-meta.xml
<CustomField>
    <fullName>CallObject__c</fullName>
    <label>Identificateur de l&apos;objet de l&apos;appel</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>CallObject</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>