force-app/main/default/objects/Task_Home__dll/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <label>Type d&apos;appel</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>CallType</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>