force-app/main/default/objects/Task_Home__dll/fields/CompletedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CompletedDateTime__c</fullName>
    <label>Date/heure de réalisation</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>CompletedDateTime</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>