force-app/main/default/objects/Task_Home__dll/fields/IsHighPriority__c.field-meta.xml
<CustomField>
    <fullName>IsHighPriority__c</fullName>
    <label>Priorité élevée</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>IsHighPriority</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>