force-app/main/default/objects/Task_Home__dll/fields/IsReminderSet__c.field-meta.xml
<CustomField>
    <fullName>IsReminderSet__c</fullName>
    <label>Définition du rappel</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>IsReminderSet</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>