force-app/main/default/objects/Task_Home__dll/fields/RecurrenceDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceDayOfMonth__c</fullName>
    <label>Récurrence - Jour du mois</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RecurrenceDayOfMonth</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>