force-app/main/default/objects/Task_Home__dll/fields/RecurrenceEndDateOnly__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceEndDateOnly__c</fullName>
    <label>Fin de la récurrence</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RecurrenceEndDateOnly</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>