force-app/main/default/objects/Task_Home__dll/fields/RecurrenceInterval__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceInterval__c</fullName>
    <label>Intervalle de récurrence</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RecurrenceInterval</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>