force-app/main/default/objects/Task_Home__dll/fields/RecurrenceMonthOfYear__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceMonthOfYear__c</fullName>
    <label>Récurrence - Mois de l&apos;année</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RecurrenceMonthOfYear</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>