force-app/main/default/objects/Task_Home__dll/fields/RecurrenceRegeneratedType__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceRegeneratedType__c</fullName>
    <label>Répéter cette tâche</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RecurrenceRegeneratedType</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>