force-app/main/default/objects/Task_Home__dll/fields/RecurrenceStartDateOnly__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceStartDateOnly__c</fullName>
    <label>Début de la récurrence</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RecurrenceStartDateOnly</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>