force-app/main/default/objects/Task_Home__dll/fields/RecurrenceTimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceTimeZoneSidKey__c</fullName>
    <label>Fuseau horaire récurrent</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RecurrenceTimeZoneSidKey</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>