force-app/main/default/objects/Task_Home__dll/fields/RecurrenceType__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceType__c</fullName>
    <label>Type de récurrence</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RecurrenceType</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>