force-app/main/default/objects/Task_Home__dll/fields/ReminderDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReminderDateTime__c</fullName>
    <label>Date/heure de rappel</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ReminderDateTime</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>