force-app/main/default/objects/Task_Home__dll/fields/TaskSubtype__c.field-meta.xml
<CustomField>
    <fullName>TaskSubtype__c</fullName>
    <label>Sous-type de tâche</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>TaskSubtype</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>