force-app/main/default/objects/Task_Home__dll/fields/WhatCount__c.field-meta.xml
<CustomField>
    <fullName>WhatCount__c</fullName>
    <label>Nombre de relations à</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>WhatCount</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>